--- a/questions.html
+++ b/questions.html
@@ -3,6 +3,47 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script src="bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
+    <script>
+
+        // test cases
+        function Test() {}
+        Test.assert = function (act, exp) {
+            if (exp !== act) {
+                console.log('Did not pass test - Expected ' + exp + ' got ' + act);
+            }
+        };
+
+        // function to check for primes
+        function isPrime(num) {
+
+        }
+
+        // test cases
+        Test.assert(isPrime(2), true);
+        Test.assert(isPrime(4), false);
+        Test.assert(isPrime(11), true);
+        Test.assert(isPrime(12), false);
+
+
+        // function to get factorials
+        function factorial(num) {
+
+        }
+
+        // test cases
+        Test.assert(factorial(2), 2);
+        try {
+            factorial(-2);
+        } catch (ex) {
+            Test.assert(ex.message, 'Invalid input');
+        }
+        Test.assert(factorial(5), 120);
+
+
+
+
+    </script>
 </head>
 <body>
 
