--- a/pe-seal-freeze.html
+++ b/pe-seal-freeze.html
@@ -3,6 +3,38 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script>
+
+
+        var o = {
+            name: 'Nina',
+            role: 'admin'
+        };
+
+        console.log(o.name);
+        Object.preventExtensions(o);
+        Object.defineProperty(o, 'name', {
+            writable: false
+        });
+        o.name = 'Jui';
+        o.id = 's258df6a645f5asdf';
+        console.log(o.id);
+        // console.log('o.name', o.name);
+        print('o.name');
+
+        function print(expr) {
+            console.log(expr, eval(expr)); // todo: Why is eval 'evil'?
+        }
+
+        function enumerate(o) {
+            console.log('\nstarting enumeration loop: ');
+            for (var prop in o) {
+
+            }
+        }
+        console.log('Is the object extensible? ' + Object.isExtensible(o) ? 'Yes' : 'No');
+
+    </script>
 </head>
 <body>
 
