--- a/valueOf.html
+++ b/valueOf.html
@@ -3,6 +3,24 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script>
+
+        function Constr(val) {
+            this.val = val
+        }
+
+        Constr.prototype.valueOf = function () {
+            return this.val;
+        };
+
+        var x = new Constr(10);
+        var y = new Constr(20);
+
+        console.log(x + y);
+
+
+
+    </script>
 </head>
 <body>
 
